Wed Oct 27 20:58:03 1999  George Lebl  <jirka@5z.com>

	* main.c: (update_status) if current_process->n_allocations,
	  don't divide by it and just strdup a "-"

Wed Oct 27 16:22:03 1999  Owen Taylor  <otaylor@redhat.com>

	* Released 0.3.0

Wed Oct 27 15:17:08 1999  Owen Taylor  <otaylor@redhat.com>

	* process.c (input_func): Remove a bunch of duplicate
	code - we don't need separate malloc/realloc/free cases.

	* process.c (input_func): Fix stupid unitialized
	variable.

Wed Oct 27 12:26:02 1999  Owen Taylor  <otaylor@redhat.com>

	* memintercept.c: Reindent to linux style

	* memintercept.c (stack_trace): Write out output in
	single write() call to ensure atomicity.

	* memintercept.c (my_free_hook): Changed hooks
	to match glibc-2.1 prototypes

	* *.[ch]: Added copyrights to source files.

	* main.c process.c process.h: Pass pre-split args
	into process_run(), add functions for splitting
	args and finding the executable.

	* main.c: Add code from Michael Meeks <michael@nuclecu.unam.mx>
	for specifying the program to debug from the command
	line.

Mon Oct 25 15:17:38 PDT 1999 Manish Singh <yosh@gimp.org>

	* configure.in: add a -ldl fallback test for libiberty

Wed Oct 20 19:59:16 1999  Owen Taylor  <otaylor@redhat.com>

	* main.c (DEFAULT_STACK_COMMAND): Use emacsclient instead of 
	gnudoit because emacsclient is standard.

	* process.c (read_inode): Fix mem leak found by MemProf.

Wed Oct 20 18:46:22 1999  Owen Taylor  <otaylor@redhat.com>

	* process.c (process_init): Look in libdir, not pkgdatadir
	for libmemintercept.so

	* process.c (process_init): Look in .libs for libmemintercept.so
	so things work in the non-installed case.

	* configure.in (MEMPROF_LIBS): Use right -l flags when
	checking for -lbfd.